# agent-template

./: .env  .env.dev.example  .env.example  .env.prod.example  .gitignore  README.md  pyproject.toml
docs/: chat.md  human-in-the-loop.md  mcp.md  message.md  skills.md
src/: main.py
src/agent/hitl/: __init__.py  approve.py
src/agent/llm/: __init__.py  model.py
src/agent/memory/: __init__.py  context.py  entry.py  postgres_checkpointer.py  postgres_store.py  state.py
src/agent/middleware/: __init__.py  skills.py  subagents.py  system_time.py  tool_calling_check.py
src/agent/middleware/prebuild/: mcp_client.py  tool_calling_check.py  tool_calls_patch.py
src/agent/prompts/: __init__.py  agent_prompts.py
src/agent/subagents/: __init__.py  agent_enum.py  file_manager.py  greet.py  main.py  research.py  review.py  user.py  writing.py
src/agent/tools/: __init__.py  file.py  greet.py  user.py
src/config/: __init__.py  settings.py
src/exception/: __init__.py  sys.py
src/log/: __init__.py  log.py
src/skills/greet/: SKILL.md
src/skills/greet/references/: greet.md
src/utils/: __init__.py  http_client.py  json_util.py
src/web/: server.py
src/web/api/: __init__.py  chat.py  health.py  message.py  routes.py
src/web/middleware/: __init__.py  auth.py  chat.py
src/web/schemas/: __init__.py  api.py  api_code.py  chat.py  message.py  state.py
src/web/service/: chat_service.py  message_service.py
src/web/session/: __init__.py  chat.py
tests/: chat_api.http  human-in-the-loop.http  mcp.http  message_api.http  skills_api.http  test_api.http
